--- a/mdcs/static/resources/css/XMLTreeCurator.css
+++ b/mdcs/static/resources/css/XMLTreeCurator.css
@@ -33,7 +33,7 @@
 	height: 12px;
 	margin-left: 2px;
 	margin-right: 2px;
-	background-image: url("../../img/collapse.png");
+	background-image: url("../img/collapse.png");
 	background-repeat: no-repeat;	
 	display: inline-block;
 }
@@ -44,7 +44,7 @@
 	height: 12px;
 	margin-left: 2px;
 	margin-right: 2px;
-	background-image: url("../../img/expand.png");
+	background-image: url("../img/expand.png");
 	background-repeat: no-repeat;	
 	display: inline-block;
 }
